--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ h1,h3{
     margin:40px;
 }
 
-form{
+form, .like-form{
     width: 40%;
     margin-left: 40px;
     padding: 30px;
@@ -62,7 +62,7 @@ button{
     background-color: darkgray;
     border-radius: 5px;
 }
-textarea{
+textarea, .like-textarea{
     width: 100%;
 }
 .rezultat{
@@ -98,6 +98,10 @@ textarea{
     flex-direction: row;
     justify-content: center;
 }
+
+
+
+
 .form-width{
     width:350px;
 }
